--- a/signup.html
+++ b/signup.html
@@ -87,18 +87,22 @@
 		if (!results) { return 0; }
 		return results[1] || 0;
 	}
-
+	
 	var akid = urlParam('akid');
 	var email = urlParam('email');
 	
+	
 	function submitCheck() {
+
 	    if (akid) {
-		    	document.getElementById("id_email").value(email);
+		    console.log('email: '+ email);
+		    	document.getElementById("id_email").value = email;
 	        document.getElementById("action-form").submit();
 	    }
 	}
 	
 	submitCheck();
+
 </script>
 
 
