--- a/signup.html
+++ b/signup.html
@@ -94,7 +94,7 @@
 	function submitCheck() {
 
 	    if (email) {
-		    	document.getElementById("id_email").value = email;
+		    	document.getElementById("id_email").value = decodeURIComponent(email);
 		    	var email_entered = true;
 		  }
 		  
