--- a/signup.html
+++ b/signup.html
@@ -88,10 +88,11 @@
 		return results[1] || 0;
 	}
 	
+	var oneclick = urlParam('oneclick');
 	var email = urlParam('email');
 	
 	
-	function submitCheck() {
+	function oneClickOptIn() {
 
 	    if (email) {
 		    	document.getElementById("id_email").value = decodeURIComponent(email);
@@ -103,8 +104,9 @@
 	    }
 	}
 	
-	submitCheck();
-
+	if (oneclick){
+		oneClickOptIn();
+	}
 </script>
 
 
