--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,6 @@
 {% extends "./wrapper.html" %}
-
 {% load actionkit_tags %}
+
 <script type="text/javascript">
 	function urlParam(name){
 		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
@@ -9,23 +9,9 @@
 	}
 	
 	var oneclick = urlParam('oneclick');
-	var email = urlParam('email');
-	
-	
-	function oneClickOptIn() {
-
-	    if (email) {
-		    	document.getElementById("id_email").value = decodeURIComponent(email);
-		    	var email_entered = true;
-		  }
-		  
-		  if(email_entered) {
-	        document.getElementById("action-form").submit();
-	    }
-	}
 	
 	if (oneclick){
-		oneClickOptIn();
+		$('#action-lead div').css('visibility', 'hidden');
 	}
 </script>
 
@@ -109,6 +95,35 @@
 				{% endif %}
 			</div>
 		</form>
+<script type="text/javascript">
+	function urlParam(name){
+		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
+		if (!results) { return 0; }
+		return results[1] || 0;
+	}
+	
+	var oneclick = urlParam('oneclick');
+	var email = urlParam('email');
+	
+	
+	function oneClickOptIn() {
+
+	    if (email) {
+		    	document.getElementById("id_email").value = decodeURIComponent(email);
+		    	var email_entered = true;
+		  }
+		  
+		  if(email_entered) {
+	        document.getElementById("action-form").submit();
+	    }
+	}
+	
+	if (oneclick){
+		oneClickOptIn();
+	}
+</script>
+
+
 		{% include "./social_plugins.html" %}
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
