--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
       <input type="radio" id="privacy_checkbox" name="privacy" value="{{privacy_text.checkbox_hash}}" >
       <label for="privacy_checkbox">{% filter ak_text:"privacy-opt_in-radio-yes" %}I'm in{% endfilter %}</label>
       &nbsp;&nbsp;
-      <input type="radio" id="privacy_checkbox_optout" name="privacy" value="" checked="checked">
+      <input type="radio" id="privacy_checkbox_optout" name="privacy" value="do-not-contact">
       <label for="privacy_checkbox_optout">{% filter ak_text:"privacy-opt_in-radio-no" %}No{% endfilter %}</label>
     </div>
     {% elif privacy_text.notice %}
@@ -28,5 +28,5 @@
       <label for="lists">{% filter ak_text:"opt_in" %}Keep me updated with emails about this and other campaigns{% endfilter %}</label>
     </div>
     {% endif %} -->
-    
+
 </div>
