--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
       <input type="radio" id="privacy_checkbox" name="privacy" value="{{privacy_text.checkbox_hash}}" required>
       <label for="privacy_checkbox">{% filter ak_text:"privacy-opt_in-radio-yes" %}I'm in{% endfilter %}</label>
       &nbsp;&nbsp;
-      <input type="radio" id="privacy_checkbox_optout" name="privacy" value="" required>
+      <input type="radio" id="privacy_checkbox_optout" name="privacy" required>
       <label for="privacy_checkbox_optout">{% filter ak_text:"privacy-opt_in-radio-no" %}No{% endfilter %}</label>
     </div>
     {% elif privacy_text.notice %}
