--- a/donate.html
+++ b/donate.html
@@ -902,7 +902,7 @@ iframe[width="1"][height="1"] {
                 total += parseFloat(other);
         }
 
-        var new_total = total == 0 ? "" : "" + (total % 1 != 0 ? total.toFixed(2) : total.toFixed(0));
+        var new_total = total === 0 ? "" : "" + (total % 1 != 0 ? total.toFixed(2) : total.toFixed(0));
         if (new_total != $('#total').html() ) {
             $('.ak-donation-total-amount').html(new_total);
         }
