--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <style>
-              .payments-titles {
+.payments-titles {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -46,6 +46,81 @@
   outline: none;
 }
 
+.payment-title-button {
+  border: 2px solid #798890;
+  border-radius: 6px;
+  margin-right: 12px;
+  margin: 0 6px;
+  padding: 3px 0;
+}
+.payment-title-button:hover {
+  border-color: #0f81e8;
+}
+
+.payment-title-button:first-of-type {
+  margin-left: 0;
+}
+.payment-title-button:last-of-type {
+  margin-right: 0;
+}
+
+.payment-title-button.payments-title-active {
+  border-color: #0f81e8;;
+}
+
+/* IE Fixes */
+.title-section-60, .title-section {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column
+}
+
+/* IE fixes for footer */
+iframe[width="1"][height="1"] {
+  width: 0;
+  height: 0;
+  display: block;
+}
+
+#site-footer {
+  top: 0;
+  position: relative;
+  margin-top: 25px;
+}
+
+#site-footer nav {
+  margin: 0;
+}
+
+.ak-multi-currency select::-ms-expand {
+    display: none;
+}
+
+/* inline fields for expiry and cvv */
+
+.inline_fields {
+  display: flex;
+}
+.inline_fields>div:first-of-type {
+  border-top: 1px solid rgba(21, 36, 43, 0.3) !important;
+  width: 50% !important;
+}
+.inline_fields>div:last-of-type {
+  width: 50% !important;
+  margin: 0 !important;
+}
+
+/* style for when the payment type above amounts custom field is set to Y */
+.paymenttype-above {
+  margin-top: -0.8em;
+  margin-bottom: 1.4em;
+}
+/* make sure the select fills the page width on mobile */
+#ak-currency-switcher {
+  max-width: initial;
+}
 </style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
@@ -302,7 +377,7 @@
           	setTimeout(update_total, 0);
           %]
       	</script>
-
+        
 {% if not has_products %}
   {% if allow_monthly %}
     {% if page.custom_fields.donation_once_recurring_or_both|lower == "recurring" %}
@@ -557,15 +632,16 @@
           <!-- <h5 class="margin-bottom-normal">{% filter ak_text:"donate_payment_information" %}Payment Information{% endfilter %}</h5> -->
           <div class="payments-container">
             <div class="payments-titles">
+              
               {% if not page.custom_fields.donation_only_paypal or page.custom_fields.donation_only_paypal.strip|lower != 'y'  %}
 
-              <div class="payments-title payments-title-active card-title">
+              <div class="payments-title {% if page.custom_fields.donation_payment_type_appearance == 'Y' %}payment-title-button{% endif %} payments-title-active card-title ">
                 <svg width="150" height="40" class="payments-title-active">
                   <image href=https://dkaroyc5da26m.cloudfront.net/images/cards.svg width="150" height="40"/>
                 </svg>
               </div>
 
-              <div class="payments-title paypal-title">
+              <div class="payments-title {% if page.custom_fields.donation_payment_type_appearance == 'Y' %}payment-title-button{% endif %} paypal-title">
                 <svg width="75" height="40">
                   <image href=https://dkaroyc5da26m.cloudfront.net/images/paypal-logo.svg width="75" height="40"/>
                 </svg>
@@ -595,47 +671,54 @@
                 <input id="id_email" class="" type="text" name="email">
               </div>
             <!--Credit Card-->
-            {% comment %} Show the Credit Card Number Field only when the custom field for donation_only_paypal is {% endcomment %}
+            {% comment %} Show the Credit Card Fields only when the custom field for donation_only_paypal is {% endcomment %}
             {% if not page.custom_fields.donation_only_paypal or page.custom_fields.donation_only_paypal.strip|lower != 'y'  %}
-            <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user cc-fields">
-              <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
-              <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
-              <div id="ak-card_num-hosted" class="hosted-field"></div>
-              <input id="ak-card_num" type="text" name="card_num">
-            </div>
-            {% endif %}
-
-            {% comment %} Show the Credit Card Expiration Field Field only when the custom field for donation_only_paypal is {% endcomment %}
-            <!--Error & Expiration Date-->
-            {% if not page.custom_fields.donation_only_paypal or page.custom_fields.donation_only_paypal.strip|lower != 'y'  %}
-              <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user cc-fields ak-err-below">
-                <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
-                <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
-                <div id="ak-exp_date-hosted" class="hosted-field"></div>
-                <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
-                  <option value="">MM</option>
-                  <option value="01">01</option>
-                  <option value="02">02</option>
-                  <option value="03">03</option>
-                  <option value="04">04</option>
-                  <option value="05">05</option>
-                  <option value="06">06</option>
-                  <option value="07">07</option>
-                  <option value="08">08</option>
-                  <option value="09">09</option>
-                  <option value="10">10</option>
-                  <option value="11">11</option>
-                  <option value="12">12</option>
-                </select>
-                <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
-                <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin cc-fields" name="exp_date_year">
-                  <option value="">YYYY</option>
-                  {% for year in exp_years %}
-                  <option value="{{ year.two }}">{{ year.four }}</option>
-                  {% endfor %}
-                </select>
-                <div class="clear"></div>
+            <fieldset class="input-group cc-fields">
+              <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user cc-fields">
+                <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
+                <input type="hidden" name="required" value="card_num" id="ak-card_num-required">
+                <div id="ak-card_num-hosted" class="hosted-field"></div>
+                <input id="ak-card_num" type="text" name="card_num">
               </div>
+              <div class="inline_fields">
+                <div id="ak-fieldbox-exp_date" class="input-select input-cc-expiration ak-input-type-user cc-fields ak-err-below">
+                  <input type="hidden" name="required" value="exp_date_month" id="ak-exp_date_month-required">
+                  <label for="ak-exp_date_month">{% filter ak_text:"field_exp_date" %}Expiration Date{% endfilter %}</label>
+                  <div id="ak-exp_date-hosted" class="hosted-field"></div>
+                  <select id="ak-exp_date_month" class="input-cc-expiration-month c4 ct4 cm4 no-margin" type="text" name="exp_date_month">
+                    <option value="">MM</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                  </select>
+                  <input type="hidden" name="required" value="exp_date_year" id="ak-exp_date_year-required">
+                  <select id="ak-exp_date_year" type="text" class="input-cc-expiration-year c6 ct6 cm6 no-margin cc-fields" name="exp_date_year">
+                    <option value="">YYYY</option>
+                    {% for year in exp_years %}
+                    <option value="{{ year.two }}">{{ year.four }}</option>
+                    {% endfor %}
+                  </select>
+                  <div class="clear"></div>
+                </div>
+
+                <div id="ak-fieldbox-card_code" class="input-text input-cvv ak-input-type-user cc-fields c5 ct5 margin-top-none">
+                  <input type="hidden" name="required" value="card_code" id="ak-card_code-required">
+                  <label for="ak-card_code" title="The 3–4 digit security code on the back of your card.">{% filter ak_text:"field_card_code" %}CVV{% endfilter %}</label>
+                  <div id="ak-card_code-hosted" class="hosted-field"></div>
+                  <input id="ak-card_code" type="text" name="card_code" size="4">
+                  <div class="clear"></div>
+                </div>
+              </div>
+            </fieldset>              
             {% endif %}
 
 
@@ -765,6 +848,15 @@
     // TODO: Commented out code needs to go.
     let paypalFieldOptionSelectedStepThree = false;
 
+    // Prevent keypress interaction
+    // Using key code also for functionality in IE
+    $(document).keydown(function(e){
+      const which = e.which;
+      if(which === 13){
+        e.preventDefault();
+      }
+    });
+
     function clear_radio_buttons() {
         $('input.ak-amount-radio-button').prop('checked', false);
     }
@@ -819,7 +911,7 @@
                 total += parseFloat(other);
         }
 
-        var new_total = total == 0 ? "" : "" + total.toFixed(0);
+        var new_total = total === 0 ? "" : "" + (total % 1 != 0 ? total.toFixed(2) : total.toFixed(0));
         if (new_total != $('#total').html() ) {
             $('.ak-donation-total-amount').html(new_total);
         }
@@ -889,7 +981,7 @@
 		}
 
     // Sherezz and Kimani Did this. Blame them
-    actionkit.utils.ensureVisible = () => {console.log("Hi. ensurevisible is now an anonymous function.")};
+    actionkit.utils.ensureVisible = function () { console.log("Hi. ensurevisible is now an anonymous function.") };
 
     function redraw_currency_symbol() {
         var id = $('input[id^=id_currency_]:checked, option[id^=id_currency_]:selected').attr('id');
@@ -1305,15 +1397,29 @@
         step_has_errors = true;
       }
 
+      if (!valid_credit_card_code($('#ak-card_code').val())) {
+        if (!actionkit.errors) actionkit.errors = {}
+        actionkit.errors['card_code:invalid'] = actionkit.forms.errorMessage('card_code:invalid');
+        actionkit.forms.onValidationErrors(actionkit.errors);
+        step_has_errors = true;
+      }
+
       console.log(step_has_errors, "Step Has Errors end of step 3?")
       return step_has_errors;
     }
 
     function step_2_validation() {
-			console.log('validating step 2');
+      console.log('validating step 2');
       var step_has_errors = false;
 
-	     return step_has_errors;
+      if (document.getElementById("country").value === "United States" && document.getElementById("id_state").value === "") {
+        if (!actionkit.errors) actionkit.errors = {};
+        actionkit.errors['state:missing'] = actionkit.forms.errorMessage('state:missing');
+        actionkit.forms.onValidationErrors(actionkit.errors);
+        step_has_errors = true;
+      }
+
+      return step_has_errors;
     }
 
     function step_1_validation() {
@@ -1574,11 +1680,11 @@
 
         /* clear out CC info if entered */
         $('#ak-card_num').val('');
-        // $('#ak-card_code').val('');
+        $('#ak-card_code').val('');
 
         /* disable CC requirements */
         $('#ak-card_num-required').remove();
-        // $('#ak-card_code-required').remove();
+        $('#ak-card_code-required').remove();
         $('#ak-exp_date_month-required').remove();
         $('#ak-exp_date_year-required').remove();
 
@@ -1627,8 +1733,8 @@
     const ccFields = $(".cc-fields");
     const paypalFields = $("paypal-fields");
 
-    const removeActivePaymentsClass = () => {
-      $.each(paymentsTitles, (index, title)=>{
+    const removeActivePaymentsClass = function () {
+      $.each(paymentsTitles, function (index, title) {
           const titleCtn = $(title);
           titleCtn.removeClass(CONSTANTS.ACTIVE_PAYMENTS_CLASS);
           paypalFieldSelectedStepThree = false;
@@ -1637,19 +1743,19 @@
     };
 
     // Use this to hide fields as appropriately
-    const toggleShowFields = (fields, show) => {
-      $.each(fields, (index, field)=>{
+    const toggleShowFields = function (fields, show) {
+      $.each(fields, function (index, field) {
         const fieldCtn = $(field);
         fieldCtn.css({'display': show ? 'block': 'none'});
       });
     };
 
 
-    $.each(paymentsTitles, (index, title)=>{
+    $.each(paymentsTitles, function (index, title) {
       const titleCtn = $(title);
-      titleCtn.click(e=>{
+      titleCtn.click(function (e) {
           const clicked = $(e.target);
-          const parentHasClass = clicked.parents(`.${CONSTANTS.ACTIVE_PAYMENTS_CLASS}`).length > 0;
+          const parentHasClass = clicked.parents('.' + CONSTANTS.ACTIVE_PAYMENTS_CLASS).length > 0;
           if(parentHasClass) return;
             else {
             const closestDiv = clicked.closest('.payments-title');
@@ -1723,6 +1829,28 @@
     });
 		{% endif %}
 
+
+    // check for currency param and set default
+    var getUrlParameter = function (sParam) {
+        var sPageURL = window.location.search.substring(1),
+            sURLVariables = sPageURL.split('&'),
+            sParameterName,
+            i;
+
+        for (i = 0; i < sURLVariables.length; i++) {
+            sParameterName = sURLVariables[i].split('=');
+
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+            }
+        }
+    };
+    $(function() {
+      if (getUrlParameter('currency')) {
+        $('#id_currency_'+getUrlParameter('currency')).attr('selected', true)
+        $('#ak-currency-switcher').trigger('change')
+      }
+		});
 //-->
 </script>
 
@@ -1730,10 +1858,10 @@
 {% if pp.use_vzero %}
 <style type="text/css">
 .hosted-field {
-  height: 50px;
+  height: 67px;
   padding: 0px 7px;
   padding-top: 2em;
-  margin-bottom:0.7em;
+  padding-bottom: 0.7em;
 }
 .hosted-field.braintree-hosted-fields-invalid {
   border-color: {{ templateset.custom_fields.color_error }};
@@ -1775,6 +1903,9 @@
                     number: {
                         selector: '#ak-card_num-hosted'
                     },
+                    cvv: {
+                        selector: '#ak-card_code-hosted'
+                    },
                     expirationDate: {
                         selector: '#ak-exp_date-hosted',
                         placeholder: 'MM / YYYY'
@@ -1800,10 +1931,10 @@
                 },
                 submit: form.querySelector(".ak-submit-button")
             },
-            toRemove = ["#ak-card_num", "#ak-exp_date_month",
+            toRemove = ["#ak-card_num", "#ak-card_code", "#ak-exp_date_month",
                         "#ak-exp_date_year", "#ak-card_num-required",
                          "#ak-exp_date_month-required",
-                        "#ak-exp_date_year-required"];
+                        "#ak-exp_date_year-required", "#ak-card_code-required"];
         toRemove.forEach(function(el) {
             $(el).remove();
         });
@@ -1823,6 +1954,7 @@
                     err.details.invalidFieldKeys.forEach(function(key) {
                         var map = {
                             'number': 'card_num',
+                            'cvv': 'card_code',
                             'expirationDate': 'card_exp'
                         };
                         actionkit.errors[map[key] + ':invalid'] = "This field is invalid.";;
@@ -1841,7 +1973,7 @@
         };
         actionkit.donations.initClient('{{ pp.client_token }}', options);
         // read by 3-step validation
-        console.log(err, "Error is here")
+        // console.log(err, "Error is here")
         actionkit.donations.skip_cc_validation = true;
         actionkit.donations.vzero = true;
       $(".hosted-field.braintree-hosted-fields-invalid").prev().css("background-color", "#fff0d4");
@@ -1850,5 +1982,14 @@
     </script>
 {% endif %}
 {% endwith %}
+
+{% if page.custom_fields.donate_payment_frequency_above_amounts == 'Y' %}
+<script>
+  $(function() {
+    $('#ak-recurring-type').insertBefore('#ak-amount-list');
+    $('#ak-recurring-type').addClass('paymenttype-above');
+  });
+</script>
+{% endif %}
 
 {% endblock %}
