update thanks monthly upsell button styling

--- a/thanks.html
+++ b/thanks.html
@@ -12,11 +12,16 @@
 	#suggestions {
 		display: flex;
 	}
-	
+	#suggestions button,
+	.upsell_other_amt button {
+		font-size: 1.8rem;
+		font-family: GraphCondensedWeb, -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+		background: #0f81e8;
+		text-shadow: none;
+	}
 	#suggestions button {
 		margin: 10px;
 		padding: 0.6em 1.2em;
-		font-size: 1.4rem;
 	}
 	.upsell_other_amt {
 		display: flex;
