--- a/donate.html
+++ b/donate.html
@@ -167,10 +167,14 @@ iframe[width="1"][height="1"] {
 		</div>
   </div>
   {% if page.custom_fields.donation_splash_page == 'Y' %}
-    <button class="button-primary button-big arrow-right" id="donation-splash-next">Donate Now</button>
+    <button class="button button-primary button-big arrow-right" id="donation-splash-next">Donate Now</button>
     <p style="max-width: 200px;text-align:center;" class="margin-top-large">Or</p>
     <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">Continue to 350.org</button>
     <style>
+      .ak-donate-three-step,
+      #action-toc {
+        display: none;
+      }
       #donation-splash-skip {
         background: none;
         border: none;
@@ -179,6 +183,14 @@ iframe[width="1"][height="1"] {
         display: block;
       }
     </style>
+    <script>
+      $(function(){
+        $('#donation-splash-next').on('click', function(){
+          $('.ak-donate-three-step, #action-toc').show();
+        });
+        // click listener for close button, send postMessage to iframe parent
+      });
+    </script>
   {% endif %}
 
 {% comment %}If "layout" is *not* set to "expanded", end the title <div> here, after the description <div>.{% endcomment %}
