--- a/donate.html
+++ b/donate.html
@@ -217,7 +217,9 @@ iframe[width="1"][height="1"] {
         $(window).resize(function() {
           sendResizeEvent();
         });
-        //sendResizeEvent();
+      });
+      $(window).load(function(){
+        sendResizeEvent();
       });
     </script>
   {% endif %}
@@ -2044,18 +2046,6 @@ iframe[width="1"][height="1"] {
     $('#ak-recurring-type').insertBefore('#ak-amount-list');
     $('#ak-recurring-type').addClass('paymenttype-above');
   });
-</script>
-{% endif %}
-
-{% if page.custom_fields.donation_splash_page == 'Y' %}
-<script>
-$(function(){
-  var pageHeight = $('body').height();
-  window.parent.postMessage({
-    'type': 'splash-modal-resize',
-    'pageHeight': pageHeight
-  }, '*');
-});
 </script>
 {% endif %}
 
