--- a/donate.html
+++ b/donate.html
@@ -219,6 +219,9 @@ iframe[width="1"][height="1"] {
           });
         });
         $(window).load(function(){
+          window.parent.postMessage({
+            'type': 'splash-modal-ready'
+          }, '*');
           sendResizeEvent();
         });
       })();
