--- a/thanks.html
+++ b/thanks.html
@@ -178,15 +178,38 @@
 
 			{% if page.custom_fields.donation_splash_page == 'Y' %}
 			<button style="display:block; margin-left: auto; margin-right:auto;" class="button button-primary arrow-right margin-top-large close-donation-splash-modal">Continue to 350.org</button>
+			<style>
+				#site-footer {
+        			display: none;
+      			}
+				section.section:only-of-type {
+        			min-height: 100vh;
+				}
+			</style>
 			<script>
-				$(function(){
-					$('.close-donation-splash-modal').on('click', function(){
-						// send close modal post message
+				(function() {
+					function sendResizeEvent() {
+						var pageHeight = $('body').height();
 						window.parent.postMessage({
-							'type': 'close-splash-modal'
+							'type': 'splash-modal-resize',
+							'pageHeight': pageHeight
 						}, '*');
+					}
+					$(function(){
+						$('.close-donation-splash-modal').on('click', function(){
+							// send close modal post message
+							window.parent.postMessage({
+								'type': 'close-splash-modal'
+							}, '*');
+						});
+						$(window).resize(function() {
+            				sendResizeEvent();
+          				});
 					});
-				});
+					$(window).load(function(){
+						sendResizeEvent();
+					});
+				})();
 			</script>
 			{% endif %}
 		</div>
