--- a/donate.html
+++ b/donate.html
@@ -201,6 +201,7 @@ iframe[width="1"][height="1"] {
       (function() {
         function sendResizeEvent() {
           var pageHeight = $('body').height();
+          console.log('page height - ' + pageHeight);
           window.parent.postMessage({
             'type': 'splash-modal-resize',
             'pageHeight': pageHeight
