--- a/donate.html
+++ b/donate.html
@@ -200,11 +200,12 @@ iframe[width="1"][height="1"] {
     <script>
       (function() {
         function sendResizeEvent() {
-          var pageHeight = $('body').height();
+          //var pageHeight = $('body').height();
+          var contentHeight = $('#action-lead').height();
           console.log('page height - ' + pageHeight);
           window.parent.postMessage({
             'type': 'splash-modal-resize',
-            'pageHeight': pageHeight
+            'pageHeight': contentHeight
           }, '*');
         }
         $(function(){
