--- a/donate.html
+++ b/donate.html
@@ -177,9 +177,6 @@ iframe[width="1"][height="1"] {
       #site-footer {
         display: none;
       }
-      #action-lead {
-        display: block;
-      }
       section.section:only-of-type {
         min-height: 100vh;
       }
@@ -203,12 +200,10 @@ iframe[width="1"][height="1"] {
     <script>
       (function() {
         function sendResizeEvent() {
-          //var pageHeight = $('body').height();
-          var contentHeight = $('#action-lead').height();
-          //console.log('page height - ' + pageHeight);
+          var pageHeight = $('body').height();
           window.parent.postMessage({
             'type': 'splash-modal-resize',
-            'pageHeight': contentHeight
+            'pageHeight': pageHeight
           }, '*');
         }
         $(function(){
