--- a/donate.html
+++ b/donate.html
@@ -208,6 +208,7 @@ iframe[width="1"][height="1"] {
         }
         $(function(){
           $('#donation-splash-next').on('click', function(){
+            $('#donation-splash-next, .close-donation-splash-modal').hide();
             $('.ak-donate-three-step, #action-toc').show();
             sendResizeEvent();
           });
