--- a/donate.html
+++ b/donate.html
@@ -202,7 +202,9 @@ iframe[width="1"][height="1"] {
     <script>
       (function() {
         function sendResizeEvent() {
-          var pageHeight = $('body').height();
+          
+          var pageHeight = $('html').height();
+          console.log('iframe resizing: ' + pageHeight);
           window.parent.postMessage({
             'type': 'splash-modal-resize',
             'pageHeight': pageHeight
@@ -221,6 +223,7 @@ iframe[width="1"][height="1"] {
             }, '*');
           });
           $(window).resize(function() {
+            
             sendResizeEvent();
           });
         });
