--- a/donate.html
+++ b/donate.html
@@ -222,7 +222,7 @@ iframe[width="1"][height="1"] {
               'type': 'close-splash-modal'
             }, '*');
           });
-          $(window).resize(function() {
+          $(window.parent).resize(function() {
             
             sendResizeEvent();
           });
