--- a/donate.html
+++ b/donate.html
@@ -168,7 +168,7 @@ iframe[width="1"][height="1"] {
   </div>
   {% if page.custom_fields.donation_splash_page == 'Y' %}
     <div class="splash-buttons">
-      <button class="button button-primary button-big arrow-right" id="donation-splash-next">Donate Now</button>
+      <button class="button button-primary arrow-right" id="donation-splash-next">Donate Now</button>
       <p style="max-width: 179px;text-align:center;" class="margin-top-large">Or</p>
       <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">Continue to 350.org</button>
     </div>
@@ -178,6 +178,9 @@ iframe[width="1"][height="1"] {
       #donation-other,
       #site-footer {
         display: none;
+      }
+      #action-lead {
+        display: block; /* stop header and paragraph from jumping when showing donate page */
       }
       section.section:only-of-type {
         min-height: 100vh;
@@ -195,7 +198,7 @@ iframe[width="1"][height="1"] {
       @media screen and (min-width:720px) {
         #action-lead.bg-blue-fade {
           background-color: transparent;
-          background-image: linear-gradient(to left, rgba(15, 129, 232, 0.5) 0%, rgba(15, 129, 232, 0.95) 500px, rgba(15, 129, 232, 0.95) 100%);
+          background-image: linear-gradient(270.76deg, rgba(15, 129, 233, 0) 26.32%, rgba(15, 129, 233, 0.54) 48.94%, #0D6AC0 74.65%, #0B5AA3 99.33%);
         }
       }
     </style>
