--- a/donate.html
+++ b/donate.html
@@ -169,7 +169,7 @@ iframe[width="1"][height="1"] {
   {% if page.custom_fields.donation_splash_page == 'Y' %}
     <div class="splash-buttons">
       <button class="button button-primary arrow-right" id="donation-splash-next">Donate Now</button>
-      <p style="max-width: 179px;text-align:center;" class="margin-top-large">Or</p>
+      <p class="margin-top-large">or</p>
       <button class="arrow-right margin-top-large close-donation-splash-modal" id="donation-splash-skip">Continue to 350.org</button>
     </div>
     <style>
@@ -191,6 +191,19 @@ iframe[width="1"][height="1"] {
         color: white;
         font-size: 1.25rem;
         display: block;
+        padding: 0;
+        text-decoration: underline;
+        padding-left: 15px;
+      }
+      .splash-buttons p {
+        max-width: 179px;
+        text-align:center;
+        font-size: 15px;
+      }
+      @media screen and (max-width:719px) {
+        #donation-splash-skip {
+          padding-left: 0;
+        }
       }
       #jump-to-form {
         display: none;
